# basemath

./: Cargo.toml  license.txt  readme.md
src/: alg.rs  cc.rs  ch.rs  comp.rs  lib.rs  lin.rs  main.rs  prim.rs  rat.rs  rules.rs  trig.rs
src/old/: alg.rs
