[package]
name = "basemath"
version = "1.1.0"
edition = "2021"
liscense = "yeah you can use it"
description = "personal little math lib from the ground up"
repository = "https://github.com/nptnl/basemath"
readme = "readme.md"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]