[package]
name = "basemath"
version = "1.1.1"
edition = "2021"
license-file = "license.txt"
description = "personal little math lib from the ground up"
repository = "https://github.com/nptnl/basemath"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]