[package]
name = "basemath"
version = "3.0.0"
edition = "2021"
license-file = "license.txt"
description = "math, from the ground up"
repository = "https://github.com/nptnl/basemath"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]